--- a/css/edu9parts.css
+++ b/css/edu9parts.css
@@ -209,9 +209,10 @@ NO CHANGES MADE FROM DEFAULT IN THE FOLLOWING SECTIONS YET */
     left: -14px;
 }
 @media only screen and (max-width: 1240px) {
+    /*margin were 20% before, so that is why it was moving right*/
     .container {
-        margin-right: 20%;
-        margin-left: 20%;
+        margin-right: 0 auto;
+        margin-left: 0 auto;
     }
     .iconHeight {
         height: 80px;
@@ -236,7 +237,8 @@ NO CHANGES MADE FROM DEFAULT IN THE FOLLOWING SECTIONS YET */
         top: 0;
         bottom: 0;
         left: 50%; 
-        margin-left: -3px;
+        /*why -3px??*/
+        margin-left: 0 auto;
     }
 
     /* Container around content */
@@ -369,8 +371,8 @@ NO CHANGES MADE FROM DEFAULT IN THE FOLLOWING SECTIONS YET */
 # Global Footer from Append
 --------------------------------------------------------------*/
 footer {
-    margin-right: 15%;
-    margin-left: 15%;
+    margin-right: 0 auto;
+    margin-left: 0 auto;
     padding-top: 50px;
     --background-color: color-mix(in srgb, var(--default-color), transparent 96%);
     color: var(--default-color);
